syntax = "proto3";

package api;

import "google/protobuf/empty.proto";

option go_package = "github.com/ArtyomArtamonov/msg/pkg/api";

message Message {
    string from = 1;
    string to = 2;
    string message = 3;
}

message Status {
    bool success = 1;
    string message = 2;
}

service MessageService {
    rpc GetMessages(google.protobuf.Empty) returns (stream Message);
    rpc SendMessage(Message) returns (Status);
}
